# DeepPilote

./: .env.example  .gitignore  CHECKPOINT_PHASE1.md  CHECKPOINT_PHASE2.md  CHECKPOINT_PHASE3.md  CHECKPOINT_PHASE4.md  CLAUDE.md  README.md  TODO.md  TODO_PHASE2.md  TODO_PHASE3.md  TODO_PHASE4.md  idee.md  pyproject.toml  requirements.txt  workflow.html
.github/workflows/: ml_tests.yml
analysis/: 01_explore_etfs.ipynb  02_correlations.ipynb  03_returns_distributions.ipynb  04_macro_features.ipynb  05_regime_comparison.ipynb  06_prediction_comparison.ipynb  07_strategy_comparison.ipynb  08_mlflow_tracking.ipynb  09_model_monitoring.ipynb  CONCLUSIONS.md
api/: __init__.py  config.py  database.py  exceptions.py  main.py
api/models/: __init__.py  analysis.py  etf.py  macro.py
api/repositories/: __init__.py  analysis_repository.py  etf_repository.py  features_repository.py  macro_repository.py
api/routers/: analysis.py  etf.py  macro.py
data/: README.md  __init__.py
data/extractors/: __init__.py  extract_bigquery.py  extract_files.py  extract_fred.py  extract_yfinance.py
data/pipeline/: __init__.py  aggregate.py  cleaning_rules.py  load_to_db.py
data/sql/: README.md
docs/: data_sources.md  database_schema.md
docs/api/: README.md
docs/mlops/: README.md
ml/: __init__.py  config.py
mlops/: __init__.py  config.py  monitoring.py  registry.py  tracking.py
scripts/: check_bq.py  run_api.py  validate_models.py
tests/: test_aggregate.py  test_data_quality.py  test_extract_bigquery.py  test_extract_files.py  test_extract_fred.py  test_extract_yfinance.py
(+40 files in other folders)
