[project]
name = "deeppilot"
version = "0.1.0"
description = "Copilote d'allocation d'actifs sur ETF diversifiés"
authors = [{ name = "Raphaël Martin" }]
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | data/raw
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (géré par black)
]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "data/raw",
]

[tool.ruff.isort]
known-first-party = ["data", "analysis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
